Continued with farm manager Added rules to report manager...has to be tested